feat: add native compilation using GraalVM